# Process-Flow-Builder

./: .env.example  .gitignore  DEPLOY.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  streamlit_app.py  vercel.json
.claude/skills/process-flow/: SKILL.md  render.py  requirements.txt  schema.json
.claude/skills/process-flow/icons/: manifest.json
.claude/skills/process-flow/samples/: tpn_flow.json  tpn_output.pptx
.claude/skills/process-flow/templates/: process_flow.pptx
api/: build.py
notes/: agent-contract.md  agent-reasoning.md  architecture-and-plan.md  capability-kb-architecture.md  claude-project-instructions.md  session-handoff.md  test-and-deploy.md
outputs/: Aljomaih_B2B_process_flow.pptx  Aljomaih_process_flow.pptx  Anderson_B2B_TOBE_flow.pptx  Anderson_B2B_movements_flow.pptx  Anderson_B2B_process_flow.pptx  Anderson_B2C_process_flow.pptx  DPWorld_process_flow.pptx  TPN_process_flow.pptx
pf_builder/: __init__.py  bundle.py  cli.py  llm.py  orchestrator.py  render_adapter.py
pf_builder/kb/: __init__.py  catalog.py  icons.py
pf_builder/providers/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py
pf_builder/scanner/: __init__.py  codebase.py
pf_builder/stages/: __init__.py  ai_use_cases.py  process_flow.py  process_mapping.py  profile.py  validate.py
public/: index.html
